# monzo-pair-starter

./: .gitignore  Makefile  README.md  pyproject.toml
src/monzo_kata/: __init__.py  ratelimiter.py  transactions.py
tests/: test_ratelimiter.py  test_transactions.py
