[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monzo-pair-starter"
version = "0.1.0"
description = "Starter kit for pair-programming (Python)"
authors = [{ name = "Leonidas Reppas" }]
requires-python = ">=3.11"
dependencies = [
"pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]